--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "blog.fmowl.com"
+url: https://fmowl10.github.io
+#"blog.fmowl.com"
 
 github:
   username: fmowl10 # change to your github username
